# python-cluedo

./: .gitignore  README.md  cluedo_assistant.py  cluedo_simulator.py  environment.yml  pyproject.toml  python_cluedo.ipynb  web_solver_server.py
cluedo-web-solver/: index.html  package.json
cluedo-web-solver/src/: App.css  App.tsx
common/: agent_utils.py  cards.py  circular_sequence.py  consts.py  dashboard.py  smart_bot_agent.py  textio.py  user_player.py  utils.py
common/io/: io.py  message_io.py  text_io.py
docs/: cluedo_sat_problem.md  mov_to_mp4.sh
examples/: example0-probabilities_data.csv
src/: game_simulator.py  tabletop_game_assistant.py
src/common/: agent_utils.py  cards.py  consts.py  dashboard.py  maths.py  probabilities_artifact_manager.py  probabilities_dashboard.py  smart_bot_agent.py  store.py  user_player.py  utils.py
tests/: test_circular_sequence.py  test_cluedo_assistant.py
